src/components/company/company.scss
@import "../../assets/css/mixin.scss";

.company {
	padding-top: 51px;
	@include breakpoint(tablet) {
		padding-top: 30px;
	}
	@include breakpoint(mobile) {
		padding: 15px 15px 0;
	}
	.col {
		float: left;
		width: 33.33%;
		padding: 0 15px;
		@include breakpoint(mobile) {
			width: 100%;
			float: none;
			padding: 10px 0 0;
			&:first-child {
				padding-top: 0;
			}
		}
		.item {
			display: block;
			overflow: hidden;
			position: relative;
			@include breakpoint(desktop) {
				&:hover {
					&::after,
					.text {
						opacity: 1;
						transition: all ease-out 0.3s;
					}
					.text {
						top: 0;
					}
				}
			}
			&::after {
				content: "";
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
				display: block;
				background-color: rgba(0, 0, 0, 0.3);
				z-index: 20;
				border-radius: 5px;
				@include breakpoint(desktop) {
					opacity: 0;
				}
			}
			img {
				border-radius: 5px;
				width: 100%;
				position: relative;
				z-index: 10;
				vertical-align: top;
			}
			.text {
				width: 100%;
				height: 100%;
				text-align: center;
				position: absolute;
				top: 0;
				left: 0;
				z-index: 30;
				display: table;
				@include breakpoint(desktop) {
					opacity: 0;
					top: 30px;
				}
				span {
					color: $color-white;
					@extend .font-title;
					font-weight: 600;
					position: absolute;
					top: 50%;
					left: 0;
					width: 100%;
					display: inline-block;
					text-align: center;
					transform: translateY(-50%);
				}
			}
		}
	}
}

.statistics {
	padding-top: 72px;
	@include breakpoint(tablet) {
		padding-top: 30px;
	}
	@include breakpoint(mobile) {
		padding-top: 15px;
	}
	.container {
		padding: 0 75px;
		text-align: center;
		@include breakpoint(tablet) {
			padding: 0 30px;
		}
		@include breakpoint(mobile) {
			padding: 0;
		}
	}
	.stats-item {
		display: inline-block;
		padding: 0 35px;
		@include breakpoint(mobile) {
			padding-left: 10px;
			padding-right: 0;
			&:first-child {
				padding-left: 0;
			}
		}
		.stats-info {
			padding-left: 100px;
			color: $color-gray;
			position: relative;
			@include breakpoint(tablet) {
				padding-left: 70px;
			}
			@include breakpoint(mobile) {
				padding-left: 0;
			}
			> i {
				position: absolute;
				top: 50%;
				left: -3px;
				transform: translateY(-50%);
				-webkit-transform: translateY(-50%);
				-moz-transform: translateY(-50%);
				-ms-transform: translateY(-50%);
				-o-transform: translateY(-50%);
				@extend .font-extra;
				color: $color-bg;
				@include breakpoint(mobile) {
					position: relative;
					top: auto;
					left: auto;
					transform: translateY(0);
					-webkit-transform: translateY(0);
					-moz-transform: translateY(0);
					-ms-transform: translateY(0);
					-o-transform: translateY(0);
					transform: translate(0);
					padding-bottom: 10px;
				}
			}
			.number {
				@extend .font-extra;
				font-weight: 300;
				padding-bottom: 10px;
				position: relative;
				.count-effect {
					position: absolute;
					top: 0;
					left: 0;
					@include breakpoint(tablet) {
						opacity: 0;
					}
				}
				.placeholder {
					opacity: 0;
					@include breakpoint(tablet) {
						opacity: 1;
					}
				}
			}
			.title {
				@extend .font-medium;
				font-weight: 600;
				text-align: left;
			}
		}
	}
}

